// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareListComponent matches snapshot 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead
          className="usa-sr-only"
        >
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <th>
              <div
                className="column-title-main"
              >
                OMS (DCM)
              </div>
            </th>
            <th>
              <div
                className="column-title-main"
              >
                SPECIAL AGENT
              </div>
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <td>
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  OMS (DCM)
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey="10034001"
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/6"
                >
                  View position
                </Link>
              </div>
              <span
                className="bid-stats"
              >
                <BidCount
                  altStyle={true}
                  bidStatistics={
                    Object {
                      "at_skill": 0,
                      "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                      "id": 6,
                      "in_grade": 0,
                      "in_grade_at_skill": 0,
                      "total_bids": 2,
                    }
                  }
                  hideLabel={true}
                  label="Bid Count"
                />
              </span>
            </td>
            <td>
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  SPECIAL AGENT
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey="56082000"
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/60"
                >
                  View position
                </Link>
              </div>
              <span
                className="bid-stats"
              >
                <BidCount
                  altStyle={true}
                  bidStatistics={
                    Object {
                      "at_skill": 0,
                      "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                      "id": 60,
                      "in_grade": 0,
                      "in_grade_at_skill": 0,
                      "total_bids": 0,
                    }
                  }
                  hideLabel={true}
                  label="Bid Count"
                />
              </span>
            </td>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill
            </th>
            <td>
              None listed
            </td>
            <td>
              SECURITY (2501)
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td>
              None listed
            </td>
            <td>
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post
            </th>
            <td>
              Freetown, Sierra Leone
            </td>
            <td>
              Chicago, IL
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td>
              None listed
            </td>
            <td>
              2 YRS (2 R & R)
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td>
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td>
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td>
              30%
            </td>
            <td>
              20%
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td>
              0%
            </td>
            <td>
              15%
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td>
              None listed
            </td>
            <td>
              03/13/2020
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Favorite
            </th>
            <td>
              <Connect(FavoriteContainer)
                compareArray={Array []}
                hasBorder={true}
                refKey={6}
                refresh={true}
                useButtonClass={true}
              />
            </td>
            <td>
              <Connect(FavoriteContainer)
                compareArray={Array []}
                hasBorder={true}
                refKey={60}
                refresh={true}
                useButtonClass={true}
              />
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when isLoading is true 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <Spinner
      size="big"
      type="homepage-position-results"
    />
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when there is an obc id 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead
          className="usa-sr-only"
        >
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <th>
              <div
                className="column-title-main"
              >
                OMS (DCM)
              </div>
            </th>
            <th>
              <div
                className="column-title-main"
              >
                SPECIAL AGENT
              </div>
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <td>
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  OMS (DCM)
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey="10034001"
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/6"
                >
                  View position
                </Link>
              </div>
              <span
                className="bid-stats"
              >
                <BidCount
                  altStyle={true}
                  bidStatistics={
                    Object {
                      "at_skill": 0,
                      "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                      "id": 6,
                      "in_grade": 0,
                      "in_grade_at_skill": 0,
                      "total_bids": 2,
                    }
                  }
                  hideLabel={true}
                  label="Bid Count"
                />
              </span>
            </td>
            <td>
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  SPECIAL AGENT
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey="56082000"
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/60"
                >
                  View position
                </Link>
              </div>
              <span
                className="bid-stats"
              >
                <BidCount
                  altStyle={true}
                  bidStatistics={
                    Object {
                      "at_skill": 0,
                      "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                      "id": 60,
                      "in_grade": 0,
                      "in_grade_at_skill": 0,
                      "total_bids": 0,
                    }
                  }
                  hideLabel={true}
                  label="Bid Count"
                />
              </span>
            </td>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill
            </th>
            <td>
              None listed
            </td>
            <td>
              SECURITY (2501)
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td>
              None listed
            </td>
            <td>
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post
            </th>
            <td>
              Freetown, Sierra Leone
            </td>
            <td>
              Chicago, IL
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td>
              None listed
            </td>
            <td>
              2 YRS (2 R & R)
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td>
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td>
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td>
              30%
              <span>
                 | 
                <OBCUrl
                  altStyle={false}
                  id={1}
                  isButton={false}
                  label="View OBC Data"
                  type="post-data"
                />
              </span>
            </td>
            <td>
              20%
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td>
              0%
              <span>
                 | 
                <OBCUrl
                  altStyle={false}
                  id={1}
                  isButton={false}
                  label="View OBC Data"
                  type="post"
                />
              </span>
            </td>
            <td>
              15%
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td>
              None listed
            </td>
            <td>
              03/13/2020
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Favorite
            </th>
            <td>
              <Connect(FavoriteContainer)
                compareArray={Array []}
                hasBorder={true}
                refKey={6}
                refresh={true}
                useButtonClass={true}
              />
            </td>
            <td>
              <Connect(FavoriteContainer)
                compareArray={Array []}
                hasBorder={true}
                refKey={60}
                refresh={true}
                useButtonClass={true}
              />
            </td>
            <td
              className="empty"
            />
            <td
              className="empty"
            />
            <td
              className="empty"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
